objects/Territory_Shadow__c.object
<CustomObject><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Include_In_Sales_Hierarchy__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include In Sales Hierarchy</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Master_Territory_ID__c</fullName>
        <label>Master Territory ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Migration_ID__c</fullName>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Office_Channel__c</fullName>
        <label>Office Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Office_Group__c</fullName>
        <label>Office Group</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Salesforce_Territory_ID__c</fullName>
        <externalId>true</externalId>
        <label>Salesforce Territory ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Siebel_Territory_ID__c</fullName>
        <label>Siebel Territory ID</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory2_Developer_Name__c</fullName>
        <label>Territory2 Developer Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Territory_Industry__c</fullName>
        <label>Territory Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory_Sales_Group__c</fullName>
        <label>Territory Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory_Sales_Team_Type__c</fullName>
        <label>Territory Sales Team Type</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory_Sector__c</fullName>
        <label>Territory Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory_Type__c</fullName>
        <label>Territory Type</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Unique_Master_Territory__c</fullName>
        <description>Stores Concatenation of Master Territory Id and Territory Model Id so Master Territory Id is unique within territory Model.</description>
        <label>Unique Master Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Shadow Territory object to be synced with the Territory2 object for custom rules management</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Territory</label><nameField>
        <label>Territory Label</label>
        <type>Text</type>
    </nameField><pluralLabel>Territories</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>Active_Territories</fullName>
        <columns>NAME</columns>
        <columns>Territory_Sector__c</columns>
        <columns>Siebel_Territory_ID__c</columns>
        <columns>Master_Territory_ID__c</columns>
        <columns>Salesforce_Territory_ID__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Siebel_Territory_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Assignment Error</value>
        </filters>
        <label>Active Territories</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Salesforce_Territory_ID__c</columns>
        <columns>Master_Territory_ID__c</columns>
        <columns>Siebel_Territory_ID__c</columns>
        <columns>Region__c</columns>
        <columns>Global_Region__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Office__c</columns>
        <columns>Office_Channel__c</columns>
        <columns>Office_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>